--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.39.0
 openai==1.30.1
-httpx==0.27.0
-urllib3==2.1.0
-requests==2.31.0
+streamlit-webrtc==0.47.4
+numpy
+av
+pydub
 faker==25.2.0
